# neatapp

./: .gitignore  README.md  pyproject.toml  setup-db.sh
migrations/: table-creation.sql
neatapp/: app.py  constants.py  data.py  db.py  models.py  utils.py
notebooks/: structured_outputs.ipynb
