[tool.pyupgrade]
py39plus = true
[tool.poetry]
name = "neatapp"
version = "0.1.0"
description = ""
authors = ["Chaipat Suwannapoom <bchaipats@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
llama-index = "^0.10.22"
llama-index-multi-modal-llms-openai = "^0.1.4"
matplotlib = "^3.8.3"
python-dotenv = "^1.0.1"
pre-commit = "^3.6.2"
streamlit = "^1.32.2"
watchdog = "^4.0.0"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
pyupgrade = "^3.15.1"
nbformat = "^5.10.3"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black formatting
[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".venv"

[tool.flake8]
exclude = ".venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator
